Update html for publishing

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <body>
+    Settlers of Catan 
 <applet code="CatanApplet.class" width="1000" height="600" >
 Your browser does not seem to support applets.
 </applet>
