minor stylistic edits

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <body>
-    Settlers of Catan 
-<applet code="CatanApplet.class" width="1000" height="600" >
+    <h1>Settlers of Catan</h1> </br>
+<applet code="CatanApplet.class" width="1100" height="700" >
 Your browser does not seem to support applets.
 </applet>
 </body>
