updated index for submission

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <body>
     <h1>Settlers of Catan</h1> </br>
+    <h2> Look for instructions in applet. Detailed instructions </h2>
+    <a href="https://docs.google.com/document/d/1dwY6xMERocYuWJdQh7S6Ygg-48vpMbdeW_goMm2hUhU/edit?usp=sharing">
+        HERE </a>
 <applet code="CatanApplet.class" width="1100" height="700" >
 Your browser does not seem to support applets.
 </applet>
